[gd_scene load_steps=3 format=3 uid="uid://fawuirxffb6k"]

[ext_resource type="Script" path="res://addons/miros/module/BehaviorTree/Util/BTGraphEditor/BTGraphEditor.gd" id="1"]
[ext_resource type="Script" path="res://addons/miros/module/BehaviorTree/Util/BTGraphEditor/BTGraphUI.gd" id="2"]

[node name="BTGraphEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
use_snap = false
minimap_enabled = false

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="Context" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Context"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="UI"]
mode = 3

[node name="Path" type="HBoxContainer" parent="UI"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0

[node name="TreeCheckButton" type="CheckButton" parent="UI"]
layout_mode = 0
text = "TREE"

[node name="Tree" type="Tree" parent="UI"]
layout_mode = 0
mouse_filter = 1
columns = 2

[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="node_deselected" from="GraphEdit" to="." method="_on_GraphEdit_node_deselected"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_GraphEdit_node_selected"]
[connection signal="confirmed" from="UI/FileDialog" to="UI" method="_on_FileDialog_confirmed"]
[connection signal="toggled" from="UI/TreeCheckButton" to="UI" method="_on_TreeCheckButton_toggled"]
[connection signal="item_activated" from="UI/Tree" to="UI" method="_on_Tree_item_activated"]
